   cluster node is launched.  If launched locally, then it whatever platform
   the current R session is running, i.e. either a POSIX shell ("sh") or
   MS Windows ("cmd").  If remotely, then the assumption is that a POSIX
   shell ("sh") is used.

 * makeNodePSOCK(), and therefore also makeClusterPSOCK(), gained argument
   'default_packages', which controls the default set of R packages to be
   attached on each cluster node at startup.
   
 * Argument 'rscript_args' of makeClusterPSOCK() now supports "*" values.
   When used, the corresponding element will be replaced with the internally
   added Rscript command-line options.  If not specified, such options are
   appended at the end.

BUG FIXES:

 * makeClusterPSOCK() did not support backslashes ('\') in 'rscript_libs',
   backslashes that may originate from, for example, Windows network drives.
   The result was that the worker would silently ignore any 'rscript_libs'
   components with backslashes.
 
 * The package detects when 'R CMD check' runs and adjust default settings
   via environment variables in order to play nicer with the machine where
   the checks are running. Some of these environment variables were in this
   case ignored since parallelly 1.26.0.
 

Version: 1.29.0 [2021-11-20]

SIGNIFICANT CHANGES:

 * makeClusterPSOCK() launches parallel workers with option 'socketOptions'
   set to "no-delay" by default.  This decreases the communication latency
   between workers and the main R session, significantly so on Unix.  This
   option requires R (>= 4.1.0) and has no effect in early versions of R.

NEW FEATURES:

 * Added argument 'socketOptions' to makeClusterPSOCK(), which sets the
   corresponding R option on each cluster node when they are launched.

 * Argument 'rscript_envs' of makeClusterPSOCK() can also be used to unset
   environment variables cluster nodes.  Any named element with value
   'NA_character_' will be unset.
